content/v1.3.0/zh/api/engine/_index.md
---
title: "engine 目录"
description: TaleWorlds.Engine 引擎类参考目录
---
<!-- BEGIN SECTION INDEX -->

## ↑ 上级导航

- [API 参考](../)
- [版本首页](../../)

## ↓ 子类列表 — 按字母分组

### A

- [AnimResult](./AnimResult)
- [ApplicationHealthChecker](./ApplicationHealthChecker)
- [ApplicationInterfaceBase](./ApplicationInterfaceBase)
- [AsyncTask](./AsyncTask)

### B

- [BillboardType](./BillboardType)
- [BodyFlags](./BodyFlags)
- [BoundingBox](./BoundingBox)

### C

- [Camera](./Camera)
- [CapsuleData](./CapsuleData)
- [CheatsHotKeyCategory](./CheatsHotKeyCategory)
- [ClothSimulatorComponent](./ClothSimulatorComponent)
- [ColorStyle](./ColorStyle)
- [ComponentType](./ComponentType)
- [CompositeComponent](./CompositeComponent)
- [ConfigQuality](./ConfigQuality)
- [CrashInformation](./CrashInformation)
- [CrashInformationCollector](./CrashInformationCollector)
- [CrashInformationProvider](./CrashInformationProvider)

### D

- [DebugHotKeyCategory](./DebugHotKeyCategory)
- [Decal](./Decal)
- [DecalAtlasGroup](./DecalAtlasGroup)

### E

- [EditDataPolicy](./EditDataPolicy)
- [EditorVisibleScriptComponentVariable](./EditorVisibleScriptComponentVariable)
- [EngineApplicationInterface](./EngineApplicationInterface)
- [EngineCallback](./EngineCallback)
- [EngineController](./EngineController)
- [EngineExtensions](./EngineExtensions)
- [EngineFilePaths](./EngineFilePaths)
- [EngineInputManager](./EngineInputManager)
- [EngineManaged](./EngineManaged)
- [EngineRenderDisplayMode](./EngineRenderDisplayMode)
- [EngineScreenManager](./EngineScreenManager)
- [EngineTexture](./EngineTexture)
- [EntityFlags](./EntityFlags)
- [EntityVisibilityFlags](./EntityVisibilityFlags)

### F

- [Face](./Face)
- [FaceCorner](./FaceCorner)
- [FloaterVolumeDynamicUpAxis](./FloaterVolumeDynamicUpAxis)
- [ForceMode](./ForceMode)
- [FtlCapsuleData](./FtlCapsuleData)

### G

- [GameEntity](./GameEntity)
- [GameEntityComponent](./GameEntityComponent)
- [GameEntityPhysicsExtensions](./GameEntityPhysicsExtensions)
- [GameEntityWithWorldPosition](./GameEntityWithWorldPosition)
- [GauntletLayer](./GauntletLayer)
- [GauntletMovieIdentifier](./GauntletMovieIdentifier)

### H

- [HasTableauCache](./HasTableauCache)
- [Highlights](./Highlights)

### I

- [IAsyncTask](./IAsyncTask)
- [IBodyPart](./IBodyPart)
- [IBooleanOptionData](./IBooleanOptionData)
- [ICamera](./ICamera)
- [IClothSimulatorComponent](./IClothSimulatorComponent)
- [ICompositeComponent](./ICompositeComponent)
- [IConfig](./IConfig)
- [IDebug](./IDebug)
- [IDecal](./IDecal)
- [IEngineSizeChecker](./IEngineSizeChecker)
- [IGameEntity](./IGameEntity)
- [IGameEntityComponent](./IGameEntityComponent)
- [IHighlights](./IHighlights)
- [IImgui](./IImgui)
- [IInput](./IInput)
- [ILight](./ILight)
- [ILoadingWindowHandler](./ILoadingWindowHandler)
- [ILoadingWindowManager](./ILoadingWindowManager)
- [IManagedMeshEditOperations](./IManagedMeshEditOperations)
- [IMaterial](./IMaterial)
- [IMesh](./IMesh)
- [IMeshBuilder](./IMeshBuilder)
- [IMetaMesh](./IMetaMesh)
- [Imgui](./Imgui)
- [IMouseManager](./IMouseManager)
- [IMusic](./IMusic)
- [InputLayout](./InputLayout)
- [Intersection](./Intersection)
- [IntersectionDetails](./IntersectionDetails)
- [IntersectionType](./IntersectionType)
- [INumericOptionData](./INumericOptionData)
- [IOptionData](./IOptionData)
- [IParticleSystem](./IParticleSystem)
- [IPath](./IPath)
- [IPhysicsMaterial](./IPhysicsMaterial)
- [IPhysicsShape](./IPhysicsShape)
- [IScene](./IScene)
- [ISceneView](./ISceneView)
- [IScreen](./IScreen)
- [IScriptComponent](./IScriptComponent)
- [ISelectionOptionData](./ISelectionOptionData)
- [IShader](./IShader)
- [ISkeleton](./ISkeleton)
- [ISoundEvent](./ISoundEvent)
- [ISoundManager](./ISoundManager)
- [ITableauView](./ITableauView)
- [ITexture](./ITexture)
- [ITextureView](./ITextureView)
- [IThumbnailCreatorView](./IThumbnailCreatorView)
- [ITime](./ITime)
- [ITwoDimensionView](./ITwoDimensionView)
- [IUtil](./IUtil)
- [IVideoPlayerView](./IVideoPlayerView)
- [IView](./IView)

### J

- [Job](./Job)
- [JobManager](./JobManager)

### L

- [Light](./Light)
- [LoadingWindow](./LoadingWindow)
- [LoadingWindowHandler](./LoadingWindowHandler)

### M

- [MainThreadPerformanceQuery](./MainThreadPerformanceQuery)
- [ManagedExtensions](./ManagedExtensions)
- [ManagedMeshEditOperations](./ManagedMeshEditOperations)
- [ManagedScriptComponent](./ManagedScriptComponent)
- [ManagedScriptHolder](./ManagedScriptHolder)
- [Material](./Material)
- [MaterialFlags](./MaterialFlags)
- [MaterialTuple](./MaterialTuple)
- [MBAlphaBlendMode](./MBAlphaBlendMode)
- [MBDebug](./MBDebug)
- [MBMeshCullingMode](./MBMeshCullingMode)
- [MBMouseButtonState](./MBMouseButtonState)
- [MBTextureType](./MBTextureType)
- [Mesh](./Mesh)
- [MeshBuilder](./MeshBuilder)
- [MessageBoxTypeFlag](./MessageBoxTypeFlag)
- [MessageManagerBase](./MessageManagerBase)
- [MetaMesh](./MetaMesh)
- [Mobility](./Mobility)
- [MouseManager](./MouseManager)
- [Music](./Music)

### N

- [NativeBooleanOptionData](./NativeBooleanOptionData)
- [NativeConfig](./NativeConfig)
- [NativeNumericOptionData](./NativeNumericOptionData)
- [NativeOptionData](./NativeOptionData)
- [NativeOptions](./NativeOptions)
- [NativeOptionsType](./NativeOptionsType)
- [NativeParallelDriver](./NativeParallelDriver)
- [NativeScriptComponent](./NativeScriptComponent)
- [NativeSelectionOptionData](./NativeSelectionOptionData)

### P

- [ParticleSystem](./ParticleSystem)
- [ParticleSystemManager](./ParticleSystemManager)
- [Path](./Path)
- [PerformanceAnalyzer](./PerformanceAnalyzer)
- [PhysicsContact](./PhysicsContact)
- [PhysicsContactInfo](./PhysicsContactInfo)
- [PhysicsContactPair](./PhysicsContactPair)
- [PhysicsEventType](./PhysicsEventType)
- [PhysicsJoint](./PhysicsJoint)
- [PhysicsMaterial](./PhysicsMaterial)
- [PhysicsMaterialFlags](./PhysicsMaterialFlags)
- [PhysicsShape](./PhysicsShape)
- [PostfxConfig](./PostfxConfig)

### R

- [RagdollState](./RagdollState)
- [RenderTargetComponent](./RenderTargetComponent)
- [Resource](./Resource)
- [RglScriptFieldType](./RglScriptFieldType)

### S

- [Scene](./Scene)
- [SceneInitializationData](./SceneInitializationData)
- [SceneLayer](./SceneLayer)
- [SceneProblemChecker](./SceneProblemChecker)
- [SceneView](./SceneView)
- [Screen](./Screen)
- [ScreenManagerEngineConnection](./ScreenManagerEngineConnection)
- [ScriptComponent](./ScriptComponent)
- [ScriptComponentBehavior](./ScriptComponentBehavior)
- [ScriptComponentFieldHolder](./ScriptComponentFieldHolder)
- [SelectionData](./SelectionData)
- [Shader](./Shader)
- [ShadowType](./ShadowType)
- [Significance](./Significance)
- [SimpleButton](./SimpleButton)
- [Skeleton](./Skeleton)
- [SoundEvent](./SoundEvent)
- [SoundEventParameter](./SoundEventParameter)
- [SoundManager](./SoundManager)
- [SphereData](./SphereData)

### T

- [TableauView](./TableauView)
- [TextFlags](./TextFlags)
- [Texture](./Texture)
- [TextureSaveFormat](./TextureSaveFormat)
- [TextureView](./TextureView)
- [ThumbnailCreatorView](./ThumbnailCreatorView)
- [ThumbnailRenderRequest](./ThumbnailRenderRequest)
- [TickRequirement](./TickRequirement)
- [Time](./Time)
- [TransformedBoundingBoxPointsContainer](./TransformedBoundingBoxPointsContainer)
- [TwoDimensionEnginePlatform](./TwoDimensionEnginePlatform)
- [TwoDimensionEngineResourceContext](./TwoDimensionEngineResourceContext)
- [TwoDimensionMeshDrawData](./TwoDimensionMeshDrawData)
- [TwoDimensionTextMeshDrawData](./TwoDimensionTextMeshDrawData)
- [TwoDimensionView](./TwoDimensionView)
- [Type](./Type)

### U

- [UIConfig](./UIConfig)
- [UIResourceManager](./UIResourceManager)
- [UpgradeLevelMask](./UpgradeLevelMask)
- [Utilities](./Utilities)

### V

- [VideoPlayerView](./VideoPlayerView)
- [View](./View)
- [ViewRenderOptions](./ViewRenderOptions)
- [VisibilityMaskFlags](./VisibilityMaskFlags)
- [VolumeDataForSubmergeComputation](./VolumeDataForSubmergeComputation)

### W

- [WeakGameEntity](./WeakGameEntity)
- [WorldFrame](./WorldFrame)
- [WorldPosition](./WorldPosition)
- [WorldPositionEnforcedCache](./WorldPositionEnforcedCache)

### Z

- [ZValidityState](./ZValidityState)


<!-- END SECTION INDEX -->
